# MutiAgent4Fraud

./: .gitignore  README.md  README_ZH.md  agents_init.py  llm_deploy.sh  process_log.py  pyproject.toml  user_profiles.json
analysis/Cooperation/: README.md  llm_judge_pipline.py
analysis/action_frequency/: query_user_actions.py
analysis/deepth/: get_depth.py
data/fraud/: fraud_tweets.json  real_tweets.json
generator/reddit/: user_generate.py
generator/twitter/: ba.py  gen.py  network.py  rag.py  requirement.txt
oasis/: __init__.py
oasis/clock/: __init__.py  clock.py
oasis/inference/: __init__.py  inference_manager.py  inference_thread.py
oasis/social_agent/: __init__.py  agent.py  agent_action.py  agent_environment.py  agent_graph.py  agents_generator.py  bad_agents_generator.py
oasis/social_platform/: __init__.py  channel.py  database.py  platform.py  platform_utils.py  post_stats.py  process_recsys_posts.py  recsys.py  task_blackboard.py  typing.py
oasis/testing/: show_db.py  utils.py
scripts/twitter_simulation_1M_agents/: twitter_1m.yaml  twitter_simulation_1m.py
test/: conftest.py
test/agent/: test_action_docstring.py  test_agent_generator.py  (+3 more)
tutorials/: tutorials.md
utils/: __init__.py  common_config_template.yaml  data_distribution_visualization.py  defense_utils.py  logging_utils.py  port_avaliable.py  port_forward.py  proxy_utils.py  report_utils.py  tweet_stats_visualization.py  tweet_stats_visualization_metric.py  update_yaml.py
visualization/: extract_transfer_conversations.py  fraud_visulsion.py  query_fraud_transfers.py
(+75 files in other folders)
